--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.14",
     "next": "15.5.5",
+    "postgres": "^3.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
