--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "esLint .",
-    "dev": "next dev --turbopack --hostname 0.0.0.0",
+    "dev": "next dev --turbopack --hostname 0.0.0.0 --port 3000",
     "dev:local": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start"
