--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "lint": "esLint .",
     "dev": "next dev --turbopack --hostname 0.0.0.0 --port 3000",
+    "dev:domain": "next dev --turbopack --hostname JuwaraSolutions.nl --port 3000",
+    "dev:port80": "sudo next dev --turbopack --hostname JuwaraSolutions.nl --port 80",
     "dev:local": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start"
