--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "16.0.0-canary.10",
+    "glob": "^11.0.3",
+    "next": "15.5.6",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "rimraf": "^6.0.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
